# Pytorch_cnn

./: Dataset_animals.py  README.md  model_animals.py  pyproject.toml  training_animals.py
data/animals/: dataset.csv
runs/ensemble_animals_2025-03-14_10-46-38/: events.out.tfevents.1741945598.amina-Aspire-A315-58.10476.0
runs/ensemble_animals_2025-03-14_10-46-51/: events.out.tfevents.1741945611.amina-Aspire-A315-58.10520.0
runs/ensemble_animals_2025-03-14_10-50-23/: events.out.tfevents.1741945823.amina-Aspire-A315-58.10720.0
runs/ensemble_animals_2025-03-14_11-02-08/: events.out.tfevents.1741946528.amina-Aspire-A315-58.11759.0
runs/ensemble_animals_2025-03-14_11-08-35/: events.out.tfevents.1741946915.amina-Aspire-A315-58.12114.0
runs/ensemble_animals_2025-03-14_11-10-05/: events.out.tfevents.1741947005.amina-Aspire-A315-58.12234.0
runs/ensemble_animals_2025-03-14_11-10-31/: events.out.tfevents.1741947031.amina-Aspire-A315-58.12297.0
runs/ensemble_animals_2025-03-14_11-12-42/: events.out.tfevents.1741947162.amina-Aspire-A315-58.12423.0
runs/ensemble_animals_2025-03-14_11-14-07/: events.out.tfevents.1741947247.amina-Aspire-A315-58.12517.0
runs/ensemble_animals_2025-03-16_11-07-25/: events.out.tfevents.1742119645.amina-Aspire-A315-58.5650.0
runs/ensemble_animals_2025-03-16_11-11-04/: events.out.tfevents.1742119864.amina-Aspire-A315-58.5866.0
runs/ensemble_animals_2025-03-16_11-11-57/: events.out.tfevents.1742119917.amina-Aspire-A315-58.5915.0
runs/ensemble_animals_2025-03-16_11-13-31/: events.out.tfevents.1742120012.amina-Aspire-A315-58.5968.0
(+3 files in other folders)
