[tool.poetry]
name = "mnist_model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "mnist_model" }]


[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
jupyter = "^1.1.1"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
tensorboard = "^2.18.0"
streamlit = "^1.41.1"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
